feat(produto/fornecedor): refatoração das classes e metodos http